tests/errors/dim_assgn_test.f90
module dim_assgn_test
integer, private, dimension(2,2) :: a(2,2) 
end module dim_assgn_test
